# OpenMMDihedralPlugin

./: CMakeLists.txt  README.md
calvados/: README.md  components.py  interactions.py  sim.py
calvados/example/: prepare.py
calvados/example/AF_jb6_97_model_0_fix74_DIH/: AF_jb6_97_model_0.dcd  components.yaml  config.yaml  run.py
calvados/example/input/: 6z5n.fasta  6z5n_98.fasta  AF_jb6_97_model_0.fasta  AF_jb6_97_model_0.json  AF_jb6_97_model_0_GSS.fasta  AF_jb6_97_model_0_fix69_CA.fasta  AF_jb6_97_model_0_mutants.fasta  JA1_AF-P31689-F1-model_v4_83.fasta  JB11_AF-Q9UBS4-F1-model_v4_25_104.fasta  JB12_AF-Q9NXW2-F1-model_v4_113_199.fasta  JB13_AF-P59910-F1-model_v4_95.fasta  JB14_AF-Q8TBM8-F1-model_v4_108_197.fasta  JB2_AF-P25686-F1-model_v4_98.fasta  JB3_AF-Q8WWF6-F1-model_v4_96.fasta  JB4_AF-Q9UDY4-F1-model_v4_93.fasta  JB5_AF-O75953-F1-model_v4_93.fasta  JB6_AF-O75190-F1-model_v4_95.fasta  JB7_AF-Q7Z6W7-F1-model_v4_91.fasta  JB8_AF-Q8NHS0-F1-model_v4_95.fasta  JB9_AF-Q9UBS3-F1-model_v4_27_114.fasta  dih_domains.yaml  domains.yaml  epsd.csv  residues.csv
python/: setup.py
python/dihedralplugin/: __init__.py  dihedralplugin.i
src/: DihedralForce.cpp  DihedralForce.h  DihedralForceImpl.cpp  DihedralForceImpl.h  DihedralKernels.h  windowsExportExample.h
src/kernels/Reference/: ReferenceDihedralKernelFactory.cpp  ReferenceDihedralKernelFactory.h  ReferenceDihedralKernels.cpp  ReferenceDihedralKernels.h
tests/: plotEnergyFunction.py  testDihedralForce.py
